--- a/gallary/style.css
+++ b/gallary/style.css
@@ -1,20 +1,19 @@
 .container {
-  display: block;
-
+  display: flex;
+  flex-direction: row;
+  width: 50%;
   position: relative;
 }
-#mySlides {
-  width: 50%;
-  height: 50%;
-  object-fit: cover;
-  position: relative;
-  
+.container > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 .active {
   display: block;
 }
 
-.slider-left , 
+.slider-left,
 .slider-right {
   cursor: pointer;
   position: absolute;
@@ -26,13 +25,9 @@
   font-weight: bold;
   font-size: 30px;
   border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
- 
 }
 
 .container > .slider-right {
-  right: 50%;
+  right: 34%;
   border-radius: 3px 0 0 3px;
 }
-
