--- a/gallary/style.css
+++ b/gallary/style.css
@@ -4,13 +4,11 @@
   width: 50%;
   position: relative;
 }
-.container > img {
+
+img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-}
-.active {
-  display: block;
 }
 
 .slider-left,
